:bug: Visible text in input

--- a/wp-content/themes/front_no_wordpress/src/scss/contents/_elements.scss
+++ b/wp-content/themes/front_no_wordpress/src/scss/contents/_elements.scss
@@ -145,6 +145,7 @@ footer {
 
         input {
             background-color: white;
+            color: black;
             width: 15vw;
             display: inline-block;
             padding: 5px 10px;
